fix(image-banner): fix text position on mobile

--- a/src/styles/components/_image-banner.scss
+++ b/src/styles/components/_image-banner.scss
@@ -6,15 +6,13 @@
 
   &__inner {
     @include container-large;
-  }
-
-  &__context {
-    @include container-text;
 
     position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
     bottom: 60px;
     z-index: 1;
-    max-width: initial;
 
     @include mq(xlarge) {
       bottom: 40px;
@@ -23,6 +21,17 @@
     @include mq(small) {
       bottom: 30px;
     }
+
+    @include mq(xsmall) {
+      position: static;
+      margin-top: 30px;
+    }
+  }
+
+  &__context {
+    @include container-text;
+
+    max-width: initial;
   }
 
   &__title {
